FIX fixed som layout problems

--- a/movies_lib_app/src/index.scss
+++ b/movies_lib_app/src/index.scss
@@ -11,6 +11,7 @@
 
 	/** greys */
 	--grey-default: #CCC;
+	--grey-medium: #D4D4D4;
 	--grey-dark: #B3B3B3;
 	--grey-light: #F2F2F2;
 }
