--- a/movies_lib_app/src/pages/detail/detail.scss
+++ b/movies_lib_app/src/pages/detail/detail.scss
@@ -4,27 +4,12 @@
 	&__wrapper {
 		@include mx.boxSize(100%);
 		display: grid;
-		grid-template-rows: 2fr 1fr 3fr 3fr;
+		grid-template-rows: 2fr 1fr repeat(2, auto);
 		position: relative;
 		background-color: var(--grey-light);
-		@media screen and ( max-width: 349.99px ) {
-			grid-template-rows: 2fr 1fr 3.5fr 2.5fr;
-		}
-		@media screen and ( min-width: 525px ) {
-			grid-template-rows: 2fr 1fr 2.5fr 2.5fr;
-		}
-		@media screen and ( min-width: 725px ) {
-			grid-template-rows: 2fr 1fr 1.8fr 2.5fr;
-		}
-		@media screen and ( min-width: 925px ) {
-			grid-template-rows: 2fr 1fr 1.5fr 2.5fr;
-		}
-		@media screen and ( min-width: 1100px ) {
-			grid-template-rows: 2fr 1fr 1.5fr 2.5fr;
-		}
+
 		@media screen and ( min-width: 12400px ) {
 			margin: 25px 30px;
-			grid-template-rows: 2fr 1fr 1.5fr 2.5fr;
 		}
 	}
 	&__fade {
