--- a/movies_lib_app/src/pages/home/home.scss
+++ b/movies_lib_app/src/pages/home/home.scss
@@ -9,7 +9,7 @@
 		position: sticky;
 		top: 0;
 		z-index: 999;
-    background-color: var(--grey-light);
+    background-color: darken($color: #F2F2F2, $amount: 5);
     box-shadow:
       0 10px 20px var(--black-alpha-y),
       0 3px 3px var(--black-alpha-x);
