--- a/movies_lib_app/src/shared/components/movieDetail/movieDetail.scss
+++ b/movies_lib_app/src/shared/components/movieDetail/movieDetail.scss
@@ -44,13 +44,19 @@
 			margin: 0 15px;
 		}
 		&-title {
-	
+			font-weight: 600;
+			color: var(--black-default)
 		}
 		&-info {
-	
+			font-size: 0.6rem;
+			font-weight: 700;
+			color: darken($color: #B3B3B3, $amount: 10);
 		}
 		&-description {
 			margin: 0 15px;
+			font-size: 0.9rem;
+			font-weight: 500;
+			color: darken($color: #B3B3B3, $amount: 10);
 		}
 	}
 }
